--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,20 @@
             android:layout_marginTop="20dp"
             android:text="Entrar"/>
 
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:id="@+id/campoNombre"
+            android:textSize="15sp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/campoPass"
+            android:layout_marginTop="20dp"
+            android:textSize="15sp"/>
     </LinearLayout>
 
 
@@ -77,15 +91,12 @@
             android:layout_weight="0.9"
             android:layout_height="match_parent"></LinearLayout>
 
-        <Button
+        <TextView
             android:id="@+id/bRegistrar"
-            android:layout_marginTop="4dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="right"
-            android:text="Registrar"/>
-
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="¿No tienes una cuenta? Registrate"/>
     </LinearLayout>
 
 </LinearLayout>
